@startuml
class GUI.PrivateChatFrame {
- JComboBox<String> senders
- JComboBox<String> recipients
- ContactList chatroom
- void initializeChat()
- void setComboBox()
- void setFonts()
- void setStartButton()
- void openPrivateChatWindows(String,String)
- void setPanels()
}
class GUI.ChatWindow {
- JTextArea chatArea
- JTextField messageField
- String sender
- String recipient
- ContactList contacts
- ChatWindow recipientWindow
~ ArrayList<ChatWindow> groupChatWindow
~ boolean isGroupChat
- void sendMessage()
+ void setRecipientWindow(ChatWindow)
+ void displayMessage(String,String)
}
class GUI.ChatGUI {
- JButton startButton
- JComboBox<String> conversationType
- void setStartPanel()
- void startPrivateChat()
- void startGroupChat()
}
class GUI.GroupChatFrame {
- ArrayList<ChatWindow> chatWindows
- ContactList contacts
- void initializeChat()
}


GUI.JFrame <|-- GUI.PrivateChatFrame
GUI.JFrame <|-- GUI.ChatWindow
GUI.JFrame <|-- GUI.ChatGUI
GUI.JFrame <|-- GUI.GroupChatFrame
@enduml